--- a/index.html
+++ b/index.html
@@ -29,4 +29,44 @@
 
 </body>
 
+<table border="1">
+    <tr>
+      <th>Month</th>
+      <th>Savings</th>
+    </tr>
+    <tr>
+      <td>January</td>
+      <td>$100</td>
+    </tr>
+    <tr>
+      <td>February</td>
+      <td>$20</td>
+    </tr>
+  </table>
+
+  <br>
+  <br>
+  <br>
+  <table border="1">
+    <caption>Table caption</caption>
+    <thead>
+      <tr>
+        <th>Month</th>
+        <th>Savings</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>January</td>
+        <td>$100</td>
+      </tr>
+      <tr>
+        <td>February</td>
+        <td>$20</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
+
 </html>
