--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <br>
   <br>
   <br>
+
   <table border="1">
     <caption>Table caption</caption>
     <thead>
@@ -66,6 +67,23 @@
       </tr>
     </tbody>
   </table>
+  
+  <table border="1">
+    <tr>
+      <td>1</td>
+      <td colspan="2">2</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td rowspan="2">5</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <td>7</td>
+      <td>9</td>
+    </tr>
+  </table>
+
   
   
 
