--- a/Lab/Lab_01.html
+++ b/Lab/Lab_01.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
+
+    <table border="1">
+        <caption>課表</caption>
+        <thead>
+          <tr>
+            <th>  </th>
+            <th>星期一</th>
+            <th>星期二</th>
+            <th>星期三</th>
+            <th>星期四</th>
+            <th>星期五</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>January</td>
+            <td>$100</td>
+          </tr>
+          <tr>
+            <td>February</td>
+            <td>$20</td>
+          </tr>
+        </tbody>
+      </table>
+      
     
 </body>
 </html>
