--- a/Lab/Lab_01.html
+++ b/Lab/Lab_01.html
@@ -22,13 +22,58 @@
         </thead>
         <tbody>
           <tr>
-            <td>January</td>
-            <td>$100</td>
+            <td>9:10</td>
+            <td>10:10</td>
+            <td>11:10</td>
+            <td>12:10</td>
+            <td>13:10</td>
+            <td>14:10</td>
+            <td>15:10</td>
+            <td>16:10</td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$20</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>午休</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
           </tr>
+          <tr>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>午休</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>軟體工程專題</td>
+            <td>軟體工程專題</td>
+            <td>軟體工程專題</td>
+            <td>午休</td>
+            <td>資訊概論</td>
+            <td>資訊概論</td>
+            <td>資訊概論</td>
+          </tr>
+          <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>午休</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+            <td>python基礎程式設計</td>
+          </tr>
+          <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>午休</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          
         </tbody>
       </table>
       
