--- a/Lab/Lab_01.html
+++ b/Lab/Lab_01.html
@@ -29,6 +29,62 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
+          <tr>
+            <td>10:10</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>軟體工程專題</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>11:10</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>軟體工程專題</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>12:10</td>
+            <td>午休</td>
+            <td>午休</td>
+            <td>午休</td>
+            <td>午休</td>
+            <td>午休</td>
+          </tr>
+          <tr>
+            <td>13:10</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>軟體工程專題</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>14:10</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>軟體工程專題</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>15:10</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+            <td>軟體工程專題</td>
+            <td>python基礎程式設計</td>
+            <td>web基礎程式設計</td>
+          </tr>
+          <tr>
+            <td>16:10</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
           
           
         </tbody>
