--- a/Lab/Lab_01.html
+++ b/Lab/Lab_01.html
@@ -48,7 +48,7 @@
           <tr>
             <td>12:10</td>
             <td>午休</td>
-            <td colspan="5">2</td>
+            <td colspan="5">午休</td>
           </tr>
           </tr>
           <tr>
