--- a/exercise/exerxise_01/exercise_01.html
+++ b/exercise/exerxise_01/exercise_01.html
@@ -12,14 +12,16 @@
     <div style="width: 50vw;">
 
         <p>W3C standards define an <b>Open Web Platform</b> for application development that has the unprecedented potential to enable developers to build rich interactive experiences, powered by vast data stores, that are available on any device. Although
-            the boundaries of the platform continue to evolve, industry leaders speak nearly in unison about how HTML5 will be the cornerstone for this platform. But the full strength of the platform relies on many more technologies that W3C and its partners
-            are creating, including CSS, SVG, WOFF, the Semantic Web stack, XML, and a variety of APIs.</p>
+            the boundaries of the platform continue to evolve, industry leaders speak nearly in unison about how <span style=color:blue>HTML5 </span> will be the cornerstone for this platform. But the full strength of the platform relies on many more technologies that W3C and its partners
+            are creating, including <i>CSS, SVG, WOFF</i>, the Semantic Web stack, <i>XML</i>, and a variety of APIs.</p>
 
-        <p>W3C develops these technical specifications and guidelines through a process designed to maximize consensus about the content of a technical report, to ensure high technical and editorial quality, and to earn endorsement by W3C and the broader
+        <p style="background-color: rgba(146, 226, 231, 0.719);">W3C develops these technical specifications and guidelines through a process designed to maximize consensus about the content of a technical report, to ensure high technical and editorial quality, and to earn endorsement by W3C and the broader
             community.</p>
 
         <p>If you are learning about Web technology, you may wish to start with the introduction below, and follow links for greater detail.</p>
     </div>
 </body>
+
+<p style="background-color: #C4A5DF">Some content…</p>
 
 </html>
