--- a/exercise/exercise_02/exercise_02.html
+++ b/exercise/exercise_02/exercise_02.html
@@ -31,6 +31,11 @@
     <li>Tea</li>
     <li>Milk</li>
   </ol>
+  <ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>
   
 
 </html>
