--- a/exercise/exercise_03/ex3-3.html
+++ b/exercise/exercise_03/ex3-3.html
@@ -10,8 +10,8 @@
 exercise3-3
 
 <body>
-    <mark>LINK</mark>
-    <a href="ex3-1.html">exercise3-1</a>
+    <p><mark>LINK</mark></p>
+    <a href="ex3-1.html">exercise3-1</a><br>
     <a href="ex3-2.html">exercise3-2</a>
 
     <!-- ex33  file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-3.html 
