--- a/exercise/exercise_03/ex3-3.html
+++ b/exercise/exercise_03/ex3-3.html
@@ -10,9 +10,10 @@
 exercise3-3
 
 <body>
-    <p><mark>LINK</mark></p>
+    <p><mark>LINK</mark>to other html page</p>
     <a href="ex3-1.html">exercise3-1</a><br>
-    <a href="ex3-2.html">exercise3-2</a>
+    <a href="ex3-2.html">exercise3-2</a><br>
+    exercise3-3
 
     <!-- ex33  file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-3.html 
          ex32  file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/exercise/exercise_03/ex3-2.html
