--- a/exercise/exercise_03/ex3-1.html
+++ b/exercise/exercise_03/ex3-1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<strong>exercise3-1</strong>
 <body>
     <p><mark>LINK </mark>to other html page</p>
     exercise3-1<br>
