--- a/exercise/exercise_03/ex3-3.html
+++ b/exercise/exercise_03/ex3-3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-exercise3-3
+<strong>exercise3-3</strong>
 
 <body>
     <p><mark>LINK</mark>to other html page</p>
