--- a/exercise/筆記＋練習/3月17webnote.html
+++ b/exercise/筆記＋練習/3月17webnote.html
@@ -17,10 +17,10 @@
 
 <p>hint:若有多種屬性名稱，則使用;分號隔開！！！
     背景顏色：
-    1.對整個背景上顏色：
-    2.僅對文字部分上色：
-    3.對整個網頁做背景顏色，直接加在body標籤中
-    4.如果是巢狀標籤的話，
+    1.對整個背景上顏色：</br>
+    2.僅對文字部分上色：</br>
+    3.對整個網頁做背景顏色，直接加在body標籤中</br>
+    4.如果是巢狀標籤的話，</br>
 
 <p><</p>
 
