--- a/exercise/筆記＋練習/3月17webnote.html
+++ b/exercise/筆記＋練習/3月17webnote.html
@@ -8,7 +8,7 @@
 </head>
 <p>3/17（三）課程筆記</p>
 
-<body style="background-color:rgb(108, 116, 116)">
+<body style="background-color:rgb(108, 116, 116);font-size: 20px">
 <p>光的三原色：
     可以找color code
 <h2 style="color:black">我是黑色</h2>
@@ -22,7 +22,16 @@
     3.對整個網頁做背景顏色，直接加在body標籤中</br>
     4.如果是巢狀標籤的話，</br>
 
-<p><</p>
+<p>文字的尺寸與字體：</br>
+    <p style="font-size: 20px">Some content…</p>
+    <p style="font-size: 2rem">Some content…</p>
+    
+    <p>Some <span style="font-size: 2rem">c</span>ontent…</p>
+    字體：要有安裝才有預設，沒有的字體則變成預設字體，要去瀏覽器設定，
+    打英文會比較好，否則到其他英文的店討有可能會沒辦法顯示，可以去，可以去設定中的字型找內建字體</br>
+
+    
+</p>
 
 </p>
 
