--- a/exercise/筆記＋練習/3月17webnote.html
+++ b/exercise/筆記＋練習/3月17webnote.html
@@ -15,8 +15,8 @@
 <p style
 </p>
 
-<p>hint:若有多種屬性名稱，則使用;分號隔開！！！
-    背景顏色：
+<p>hint:若有多種屬性名稱，則使用<span style="color:crimson;background-color: khaki;">;</span>分隔開！</br>
+    背景顏色：<br>
     1.對整個背景上顏色：</br>
     2.僅對文字部分上色：</br>
     3.對整個網頁做背景顏色，直接加在body標籤中</br>
