--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head>課表
 <body>
 
     <table border="1">
-        <caption>課表</caption>
+        <caption>產業新尖兵</caption>
         <thead>
           <tr>
-            <th>  </th>
-            <th><b>星期一</b></th>
+            <th style="background-color: navy">  </th>
+            <th style="background-color: navy;color: rgb(245, 233, 75);">星期一</th>
             <th>星期二</th>
             <th>星期三</th>
             <th>星期四</th>
