--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -14,10 +14,10 @@
           <tr>
             <th style="background-color: navy">  </th>
             <th style="background-color: navy;color: rgb(245, 233, 75);">星期一</th>
-            <th>星期二</th>
-            <th>星期三</th>
-            <th>星期四</th>
-            <th>星期五</th>
+            <th style="background-color: navy;color: rgb(245, 233, 75);">星期二</th>
+            <th style="background-color:navy;color: rgb(245, 233, 75);">星期三</th>
+            <th style="background-color: navy;color: rgb(245, 233, 75);">星期四</th>
+            <th style="color: rgb(245, 233, 75);background-color: navy;">星期五</th>
           </tr>
         </thead>
         <tbody>
