--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -22,7 +22,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>9:10</td>
+            <td style="background-color: paleturquoise;">9:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
             <td>軟體工程專題</td>
