--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td style="background-color: paleturquoise;">16:10</td>
-            <td colspan="5";style="background-color:paleturquoise"></td>
+            <td colspan="5";style="background-color:rgb(233,204,141)"></td>
           </tr>
 
           
