--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -75,7 +75,7 @@
             <td>web基礎程式設計</td>
           </tr>
           <tr>
-            <td style="background-color: paleturquoise;">16:10</td>
+            <td style="background-color:rgb(233, 204, 141);">16:10</td>
             <td colspan="5";style="background-color:rgb(233,204,141)"></td>
           </tr>
 
