--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -8,7 +8,7 @@
 </head>課表
 <body>
 
-    <table style="width: 70;"border=1>
+    <table style="width: 70vw;"border=1>
         <caption>產業新尖兵</caption>
         <thead>
           <tr>
