text-align center

--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -11,7 +11,7 @@
     <table style="width: 70vw;"border=1>
         <caption>產業新尖兵</caption>
         <thead>
-          <tr>
+          <tr style="text-align: center;">
             <th style="background-color: navy">  </th>
             <th style="background-color: navy;color: rgb(245, 233, 75);">星期一</th>
             <th style="background-color: navy;color: rgb(245, 233, 75);">星期二</th>
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: paleturquoise;">9:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -29,7 +29,7 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;"> 
             <td style="background-color: paleturquoise;">10:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -37,7 +37,7 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: paleturquoise;">11:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -45,12 +45,12 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: rgb(233, 204, 141);">12:10</td>
             <td colspan="5">午休</td>
           </tr>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: paleturquoise;">13:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -58,7 +58,7 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: paleturquoise;">14:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -66,7 +66,7 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color: paleturquoise;">15:10</td>
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
@@ -74,7 +74,7 @@
             <td>python基礎程式設計</td>
             <td>web基礎程式設計</td>
           </tr>
-          <tr>
+          <tr style="text-align: center;">
             <td style="background-color:rgb(233, 204, 141);">16:10</td>
             <td colspan="5";style="background-color:rgb(233,204,141)"></td>
           </tr>
