--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -47,7 +47,7 @@
           </tr>
           <tr style="text-align: center;">
             <td style="background-color: rgb(233, 204, 141);">12:10</td>
-            <td colspan="5">午休</td>
+            <td colspan="5" style="background: rgb(233, 204, 141);">午休</td>
           </tr>
           </tr>
           <tr style="text-align: center;">
@@ -76,7 +76,7 @@
           </tr>
           <tr style="text-align: center;">
             <td style="background-color:rgb(233, 204, 141);">16:10</td>
-            <td colspan="5";style="background-color:rgb(255,0,0);"></td>
+            <td colspan="5" style="background-color:rgb(233,204,141);"></td>
           </tr>
 
           
