--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head style="font-size:30px";>課表
-<body>
+<body style="font-family：：Biaukai">
 
     <table style="width: 70vw;"border=1>
         <caption>產業新尖兵</caption>
@@ -76,7 +76,7 @@
           </tr>
           <tr style="text-align: center;">
             <td style="background-color:rgb(233, 204, 141);">16:10</td>
-            <td colspan="5" style="background-color:rgb(233,204,141);"></td>
+            <td colspan="5" style="background-color:rgb(233,204,141);">下課囉！</td>
           </tr>
 
           
