--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head style="font-size:30px";>課表
-<body style="font-family：：Biaukai">
+<body style="font-family: cursive;">
 
     <table style="width: 70vw;"border=1>
         <caption>產業新尖兵</caption>
