--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -8,7 +8,7 @@
 </head style="font-size:30px";>課表
 <body>
 
-    <table style="width: 70vw;font-family: serif;"border=1>
+    <table style="width: 70vw;font-family: cursive;" border=1>
         <caption>產業新尖兵</caption>
         <thead>
           <tr style="text-align: center;">
