--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head style="font-size:30px";>課表
+</head>
 <body>
-
-    <table style="width: 70vw;font-family: cursive;" border=1>
-        <caption>產業新尖兵</caption>
+  <h1 style="font-size: large;">課表</h1>
+    <table style="width: 70vw;font-family:Arial, Helvetica, sans-serif" border=1>
+        <caption>產業新尖兵 mbnv</caption>
         <thead>
           <tr style="text-align: center;">
             <th style="background-color: navy">  </th>
