--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1 style="font-size: large;text-align: center;">課表</h1>
+  <h1 style="font-size: large;text-align: left;">課表</h1>
     <table style="width: 70vw;font-family:Arial, Helvetica, sans-serif" border=1>
         <caption>產業新尖兵 mbnv</caption>
         <thead>
