--- a/Lab/index.html
+++ b/Lab/index.html
@@ -9,22 +9,29 @@
 <body>
     <h1>產業新尖兵 Lab練習</h1>
     <table border="1">
-        <caption>Table caption</caption>
+        
         <thead>
           <tr>
-            <th>Month</th>
-            <th>Savings</th>
+            <th>Lab</th>
+            <th>描述</th>
+            <th>超連結</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>January</td>
-            <td>$100</td>
+            <td>Lab 01 - 課表</td>
+            <td>使用表格標籤製作一份課表</td>
+            <td><a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/Lab/Lab_01.html">Lab_01.html</a></td>
           </tr>
           <tr>
-            <td>February</td>
-            <td>$20</td>
+            <td>Lab 02 - 美化課表</td>
+            <td>使用style屬性美化課表</td>
+            <td><a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/Lab/Lab_02%20.html">Lab_02.html</a></td>
           </tr>
+          <tr>
+            <td>Lab 03 - 彙整Lab</td>
+            <td>建立所有Lab的彙整頁面</td>
+            <td></td>
         </tbody>
       </table>
       
