--- a/Lab/index.html
+++ b/Lab/index.html
@@ -10,8 +10,8 @@
     <h1>產業新尖兵 Lab練習</h1>
     <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;" border="1">
         
-        <thead style="background-color: rgb(153, 179, 179);"> 
-          <tr>
+        <thead> 
+          <tr style="background-color: rgb(153, 179, 179);"> 
             <th>Lab</th>
             <th>描述</th>
             <th>超連結</th>
