body text-align left

--- a/Lab/index.html
+++ b/Lab/index.html
@@ -17,7 +17,7 @@
             <th>超連結</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody style="text-align: left;">
           <tr>
             <td>Lab 01 - 課表</td>
             <td>使用表格標籤製作一份課表</td>
