--- a/Lab/index.html
+++ b/Lab/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>產業新尖兵 Lab練習</h1>
-    <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;">
+    <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;border: 1px black solid;border-radius:10px;">
         
         <thead> 
           <tr style="background-color: rgb(153, 179, 179);"> 
