--- a/Lab/index.html
+++ b/Lab/index.html
@@ -11,7 +11,7 @@
     <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;border: 1px black solid;border-radius:10px;">
         
         <thead> 
-          <tr style="background-color: rgb(153, 179, 179);"> 
+          <tr style="background-color: rgb(153, 179, 179);border-bottom: 1px black solid;> 
             <th>Lab</th>
             <th>描述</th>
             <th>超連結</th>
