--- a/Lab/index.html
+++ b/Lab/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--index代表首頁-->
     <h1>產業新尖兵 Lab練習</h1>
     <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;border: 1px black solid;border-radius:10px;">
         
