--- a/Lab/index.html
+++ b/Lab/index.html
@@ -22,12 +22,12 @@
           <tr>
             <td>Lab 01 - 課表</td>
             <td>使用表格標籤製作一份課表</td>
-            <td><a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/Lab/Lab_01.html">Lab_01.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_01.html">Lab_01.html</a></td>
           </tr>
           <tr>
             <td>Lab 02 - 美化課表</td>
             <td>使用style屬性美化課表</td>
-            <td><a href="file:///Users/xuqiaorong/Desktop/阿綺/kiki-web--demo/Lab/Lab_02%20.html">Lab_02.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_02%20.html">Lab_02.html</a></td>
           </tr>
           <tr>
             <td>Lab 03 - 彙整Lab</td>
