--- a/Lab/index.html
+++ b/Lab/index.html
@@ -27,7 +27,7 @@
           <tr>
             <td>Lab 02 - 美化課表</td>
             <td>使用style屬性美化課表</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_02%20.html">Lab_02.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_02.html">Lab_02.html</a></td>
           </tr>
           <tr>
             <td>Lab 03 - 彙整Lab</td>
