--- a/Lab/index.html
+++ b/Lab/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="font-family: Arial, Helvetica, sans-serif;">
     <!--index代表首頁-->
     <h1>產業新尖兵 Lab練習</h1>
-    <table style="width: 80vw;font-family: Arial, Helvetica, sans-serif;text-align: center;border: 1px black solid;border-radius:10px;">
+    <table style="width: 80vw;text-align: center;border: 1px black solid;border-radius:10px;">
         
         <thead> 
           <tr style="background-color: rgb(153, 179, 179);border-bottom:1px black solid;"> 
+            <!--border bottom 沒有跑出標題下框線-->
             <th>Lab</th>
             <th>描述</th>
             <th>超連結</th>
