--- a/exercise/exercise_02/exercise_02.html
+++ b/exercise/exercise_02/exercise_02.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <div style="width: 80vw;">
+    <h1>Exercise 02</h1>
+    <div style="width: 60vw;">
         <!-- 修改以下部份 -->
         <p><a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/</a>is the current HTML standard. It obsoletes all other previously-published HTML specifications.</p>
 
