--- a/Lab/index.html
+++ b/Lab/index.html
@@ -33,7 +33,13 @@
           <tr>
             <td>Lab 03 - 彙整Lab</td>
             <td>建立所有Lab的彙整頁面</td>
-            <td></td>
+            <td>index</td>
+          </tr>
+          <tr>
+            <td>Lab 04 - lab2改以css美化課表</td>
+            <td>在head中使用style標籤，與選擇器</td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_04.html">Lab_04.html</a></td>
+          </tr>
         </tbody>
       </table>
       
