--- a/exercise/筆記＋練習/3月25webnote.html
+++ b/exercise/筆記＋練習/3月25webnote.html
@@ -5,15 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<p>3/17（三）課程筆記</p>
+    <style>
+        .box {
+            border: 1px red solid;
+            display: flex;
 
-<body style="background-color:rgb(217, 233, 233);font-size: 20px">
-<p>光的三原色：
-    可以找color code
-<h2 style="color:black">我是黑色</h2>
-<p style
-</p>
+        }
+    </style>
+</head>
+
+
+
+<body>
+    <div class="box">
+        <div>test1</div>
+        <div>test2</div>
+        <div>test3</div>
+        <div>test4</div>
+        <div>test5</div>
+        <div>test6</div>
+        <div>test7</div>
+        <div>test8</div>
+        <div>test9</div>
+        <div>test10</div>
+        
+    </div>
+
 
 <p>hint:若有多種屬性名稱，則使用<span style="color:crimson;background-color: khaki;">;</span>分隔開！</br>
     背景顏色：<br>
@@ -33,6 +50,8 @@
 
     
 </p>
+
+
 
 <ol>
     <li>Coffee</li>
