--- a/exercise/exercise_03/ex3-3.html
+++ b/exercise/exercise_03/ex3-3.html
@@ -13,7 +13,7 @@
 
 
     <p><mark>LINK</mark>to other html page</p>
-    <a href="ex3-1.html">exercise3-1</a><br>
+    <a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03/ex3-1.html">exercise3-1</a><br>
     <a href="ex3-2.html">exercise3-2</a><br>
     exercise3-3
     <!--https://kikmiao1995.github.io/kiki-web--demo/-->
