--- a/exercise/index.html
+++ b/exercise/index.html
@@ -21,20 +21,33 @@
         </thead>
         <tbody style="text-align: left;">
           <tr>
-            <td>Exercise 01 </td>
+            <td>Exercise_01 </td>
             <td>修改檔案內容--排版</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_01/exercise_01.html" target="_blank">Exercise_01.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/Exercise_01/exercise_01.html" target="_blank">Exercise_01.html</a></td>
           </tr>
           <!--a href 後接blank要不要空格-->
           <tr>
-            <td>Exercise 02 </td>
+            <td>Exercise_02 </td>
             <td>修改檔案內容，建立以新視窗開啟之超連結</td>
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_02.html" target="_blank">Exercise_02.html</a></td>
           </tr>
           <tr>
-            <td>Exercise 03 </td>
+            <td>Exercise_03 </td>
             <td>建立三個網頁以超連結互相連結</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03.html" target="_blank">Exercise_03.html</a></td>
+            <td>
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03.html" target="_blank">Exercise_03.html</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td>Exercise_04 </td>
+            <td>建立三個網頁以超連結互相連結</td>
+            <td>
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03.html" target="_blank">Exercise_04.html</a>
+            </td>
+          </tr>
+          <!--包含清單概念的web,1 pic+外部link+內部link->
+
         </tbody>
       </table>
       
