--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -28,6 +28,31 @@
             width: 7vmin;
             height: 7vmin;
         }
+        table tr:nth-child(3) td:nth-child(2),
+        table tr:nth-child(3) td:nth-child(3),
+        table tr:nth-child(3) td:nth-child(6),
+        table tr:nth-child(3) td:nth-child(7),
+        table tr:nth-child(4) td:nth-child(2),
+        table tr:nth-child(4) td:nth-child(3),
+        table tr:nth-child(4) td:nth-child(6),
+        table tr:nth-child(4) td:nth-child(7),
+        table tr:nth-child(5) td:nth-child(4),
+        table tr:nth-child(5) td:nth-child(5),
+        table tr:nth-child(6) td:nth-child(3),
+        table tr:nth-child(6) td:nth-child(4),
+        table tr:nth-child(6) td:nth-child(5),
+        table tr:nth-child(6) td:nth-child(6),
+        table tr:nth-child(7) td:nth-child(3),
+        table tr:nth-child(7) td:nth-child(4),
+        table tr:nth-child(7) td:nth-child(5),
+        table tr:nth-child(7) td:nth-child(6),
+        table tr:nth-child(8) td:nth-child(3),
+        table tr:nth-child(8) td:nth-child(6) {
+            background-color: black;
+        }
+
+        
+
         /* 請在此加入更多 style */
     </style>
 </head>
