--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -50,6 +50,12 @@
         table tr:nth-child(8) td:nth-child(6) {
             background-color: black;
         }
+        table tr:nth-child(1) td:nth-child(2),
+        table tr:nth-child(2) td:nth-child(3),
+        table tr:nth-child(4) td:nth-child(5),
+        table tr:nth-child(6) td:nth-child(2) {
+            background-color: rgba(39, 87, 31, 0.562);
+        }
 
         
 
