add dark green2

--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -54,7 +54,62 @@
         table tr:nth-child(2) td:nth-child(3),
         table tr:nth-child(4) td:nth-child(5),
         table tr:nth-child(6) td:nth-child(2) {
-            background-color: rgba(39, 87, 31, 0.562);
+            background-color:rgb(0, 78, 0);
+        }
+        /*group3*/
+        table tr:nth-child(1) td:nth-child(7),
+        table tr:nth-child(2) td:nth-child(1),
+        table tr:nth-child(3) td:nth-child(8),
+        table tr:nth-child(4) td:nth-child(4),
+        table tr:nth-child(7) td:nth-child(2),
+        table tr:nth-child(7) td:nth-child(8),
+        table tr:nth-child(8) td:nth-child(1) {
+            background-color:#0f800f);
+        }
+        /*group4*/
+        table tr:nth-child(1) td:nth-child(3),
+        table tr:nth-child(1) td:nth-child(8),
+        table tr:nth-child(2) td:nth-child(2),
+        table tr:nth-child(2) td:nth-child(4),
+        table tr:nth-child(2) td:nth-child(5),
+        table tr:nth-child(2) td:nth-child(7),
+        table tr:nth-child(6) td:nth-child(1),
+        table tr:nth-child(6) td:nth-child(7),
+        table tr:nth-child(8) td:nth-child(2),
+        table tr:nth-child(8) td:nth-child(8){
+            background-color
+        }
+        /*group5*/
+        table tr:nth-child(1) td:nth-child(5),
+        table tr:nth-child(1) td:nth-child(6),
+        table tr:nth-child(2) td:nth-child(6),
+        table tr:nth-child(4) td:nth-child(1),
+        table tr:nth-child(5) td:nth-child(2),
+        table tr:nth-child(5) td:nth-child(8),
+        table tr:nth-child(8) td:nth-child(7){
+            background-color
+        }
+        /*group6*/
+        table tr:nth-child(3) td:nth-child(1),
+        table tr:nth-child(3) td:nth-child(5),
+        table tr:nth-child(4) td:nth-child(8),
+        table tr:nth-child(5) td:nth-child(1),
+        table tr:nth-child(5) td:nth-child(3),
+        table tr:nth-child(5) td:nth-child(7),
+        table tr:nth-child(7) td:nth-child(7),
+        table tr:nth-child(8) td:nth-child(4){
+            background-color
+        }
+        /*group7*/
+        table tr:nth-child(1) td:nth-child(1),
+        table tr:nth-child(1) td:nth-child(4),
+        table tr:nth-child(2) td:nth-child(8),
+        table tr:nth-child(3) td:nth-child(4),
+        table tr:nth-child(5) td:nth-child(6),
+        table tr:nth-child(6) td:nth-child(8),
+        table tr:nth-child(7) td:nth-child(1),
+        table tr:nth-child(8) td:nth-child(5){
+            background-color
         }
 
         
