--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -77,7 +77,7 @@
         table tr:nth-child(6) td:nth-child(7),
         table tr:nth-child(8) td:nth-child(2),
         table tr:nth-child(8) td:nth-child(8){
-            background-color
+            background-color:#0db50d
         }
         /*group5*/
         table tr:nth-child(1) td:nth-child(5),
@@ -87,7 +87,7 @@
         table tr:nth-child(5) td:nth-child(2),
         table tr:nth-child(5) td:nth-child(8),
         table tr:nth-child(8) td:nth-child(7){
-            background-color
+            background-color:#609e60
         }
         /*group6*/
         table tr:nth-child(3) td:nth-child(1),
@@ -98,7 +98,7 @@
         table tr:nth-child(5) td:nth-child(7),
         table tr:nth-child(7) td:nth-child(7),
         table tr:nth-child(8) td:nth-child(4){
-            background-color
+            background-color:#8fe38f
         }
         /*group7*/
         table tr:nth-child(1) td:nth-child(1),
@@ -109,7 +109,7 @@
         table tr:nth-child(6) td:nth-child(8),
         table tr:nth-child(7) td:nth-child(1),
         table tr:nth-child(8) td:nth-child(5){
-            background-color
+            background-color:#8fe38f
         }
 
         
