--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -64,7 +64,7 @@
         table tr:nth-child(7) td:nth-child(2),
         table tr:nth-child(7) td:nth-child(8),
         table tr:nth-child(8) td:nth-child(1) {
-            background-color:#0f800f);
+            background-color:#0f800f;
         }
         /*group4*/
         table tr:nth-child(1) td:nth-child(3),
