--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -87,7 +87,7 @@
         table tr:nth-child(5) td:nth-child(2),
         table tr:nth-child(5) td:nth-child(8),
         table tr:nth-child(8) td:nth-child(7){
-            background-color:#609e60
+            background-color:#81b881
         }
         /*group6*/
         table tr:nth-child(3) td:nth-child(1),
