--- a/Exercise/Exercise_08/index.html
+++ b/Exercise/Exercise_08/index.html
@@ -54,7 +54,7 @@
         table tr:nth-child(2) td:nth-child(3),
         table tr:nth-child(4) td:nth-child(5),
         table tr:nth-child(6) td:nth-child(2) {
-            background-color:rgb(0, 78, 0);
+            background-color:rgb(14, 83, 14);
         }
         /*group3*/
         table tr:nth-child(1) td:nth-child(7),
@@ -77,7 +77,7 @@
         table tr:nth-child(6) td:nth-child(7),
         table tr:nth-child(8) td:nth-child(2),
         table tr:nth-child(8) td:nth-child(8){
-            background-color:#0db50d
+            background-color:#45a145
         }
         /*group5*/
         table tr:nth-child(1) td:nth-child(5),
@@ -87,7 +87,7 @@
         table tr:nth-child(5) td:nth-child(2),
         table tr:nth-child(5) td:nth-child(8),
         table tr:nth-child(8) td:nth-child(7){
-            background-color:#81b881
+            background-color:#84d484
         }
         /*group6*/
         table tr:nth-child(3) td:nth-child(1),
