--- a/exercise/index.html
+++ b/exercise/index.html
@@ -84,11 +84,14 @@
 
           <tr>
             <td>Exercise_08 </td>
-            <td></td>
+            <td>用nth-child畫苦力怕</td>
             <td>
-              
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_08" title="可愛的苦力怕" target="_blank">
+                Exercise_08
+              </a>
             </td>
           </tr>
+          <!--kiki-web--demo/Exercise/Exercise_08/index.html-->
 
           <tr>
             <td>Exercise_09 </td>
