--- a/Exercise/筆記＋練習/3月31.html
+++ b/Exercise/筆記＋練習/3月31.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         * {
-            border:black solid 1 px
+            border: 1px black solid
         }
     </style>
 </head>
