--- a/Exercise/筆記＋練習/3月31.html
+++ b/Exercise/筆記＋練習/3月31.html
@@ -9,6 +9,11 @@
         * {
             border: 1px black solid
         }
+        .container{
+            display: grid
+            grid-template-columns: 100px 100px 100px ;
+            grid-template-rows: 100px 100px 100px 100px;
+        }
     </style>
 </head>
 <body>
