--- a/Exercise/筆記＋練習/3月31.html
+++ b/Exercise/筆記＋練習/3月31.html
@@ -11,8 +11,8 @@
         }
         .container{
             display: grid
-            grid-template-columns: 100px 100px 100px ;
-            grid-template-rows: 100px 100px 100px 100px;
+            grid-template-columns:100px 100px 100px;
+            gri-template-rows:100px 100px 100px 100px;
         }
     </style>
 </head>
