--- a/exercise/exerxise_01/exercise_01.html
+++ b/exercise/exerxise_01/exercise_01.html
@@ -20,5 +20,6 @@
 
         <p>If you are learning about Web technology, you may wish to start with the introduction below, and follow links for greater detail.</p>
     </div>
+    <div>test</div>
 </body>
 </html>
