--- a/Lab/Lab_02 .html
+++ b/Lab/Lab_02 .html
@@ -9,7 +9,7 @@
 <body>
   <h1 style="font-size: large;text-align: left;">課表</h1>
     <table style="width: 70vw;font-family:Arial, Helvetica, sans-serif" border=1>
-        <caption>產業新尖兵 mbnv</caption>
+        <caption>產業新尖兵 </caption>
         <thead>
           <tr style="text-align: center;">
             <th style="background-color: navy">  </th>
