--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -9,6 +9,19 @@
 <body>
     <table>
         <thead>
+            <tr>
+                <!--可以省略tr直接寫th嗎？-->
+                <th colspan="3">資產</th>
+                <th colspan="3">負債及股東權益</th>
+            </tr>
+            <tr>
+                <td rowspan="4">流動資產</td>
+                <td>現金</td>
+                <td>399,526</td>
+                <td rowspan="3">流動負債</td>
+                <td>短期借款</td>
+                <td>1,634,870</td>
+            </tr>
             
         </thead>
     </table>
@@ -25,7 +38,8 @@
     <div>
         <h6>reference:<h6>
         <a href="https://www.webdesigns.com.tw/css-table.asp" target="_blank">table_01</a>
-        <a href="https://cyublog.com/articles/css-zh/html-table-css/" target="_blank">table02</a>
+        <a href="https://cyublog.com/articles/css-zh/html-table-css/" target="_blank">table_02</a>
+        <a href="https://developer.mozilla.org/zh-TW/docs/Web/HTML/Element/table" target="_blank">table_03</a>
     </div>
 </body>
 </html>
