--- a/Exercise/筆記＋練習/3月31.html
+++ b/Exercise/筆記＋練習/3月31.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     <style>
         * {
-            border: 1px black solid
+            border: 1px black solid;
         }
-        .container{
-            display: grid
-            grid-template-columns:100px 100px 100px;
+        .container {
+            display: grid;
+            grid-template-columns: 100px 100px 100px;
             grid-template-rows: 100px 100px 100px 100px;
         }
     </style>
