--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <table>
@@ -22,7 +25,7 @@
                 <td>短期借款</td>
                 <td>1,634,870</td>
             </tr>
-            
+
         </thead>
     </table>
 
