--- a/Lab/index.html
+++ b/Lab/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kiki's Lab練習</title>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;">
     <!--index代表首頁-->
@@ -36,10 +36,16 @@
             <td>index</td>
           </tr>
           <tr>
-            <td>Lab 04 - lab2改以css美化課表</td>
-            <td>在head中使用style標籤，與選擇器</td>
+            <td>Lab 04 - css美化課表</td>
+            <td>在head tag使用style標籤與選擇器</td>
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_04.html">Lab_04.html</a></td>
           </tr>
+          <tr>
+            <td>Lab 05 - lab04改以css美化課表</td>
+            <td>利用所學進一步美化課表</td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_05.html">Lab_04.html</a></td>
+          </tr>
+
         </tbody>
       </table>
       
