error:zero-width space

--- a/Exercise/筆記＋練習/3月31.html
+++ b/Exercise/筆記＋練習/3月31.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,15 @@
         * {
             border: 1px black solid;
         }
+        
         .container {
             display: grid;
-            grid-template-columns: 100px 100px 100px;
             grid-template-rows: 100px 100px 100px 100px;
+            grid-template-columns: 100px 100px 100px;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div>1</div>
@@ -30,4 +33,5 @@
         <div>10</div>
     </div>
 </body>
+
 </html>
