--- a/Lab/index.html
+++ b/Lab/index.html
@@ -43,8 +43,19 @@
           <tr>
             <td>Lab 05 - lab04改以css美化課表</td>
             <td>利用所學進一步美化課表</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_05.html">Lab_04.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_05.html">Lab_05.html</a></td>
           </tr>
+          <tr>
+            <td>Lab 06 - 網頁中的課表</td>
+            <td>規劃頁面中有課表的系統介面</td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_06.html">Lab_06.html</a></td>
+          </tr>
+          <tr>
+            <td>Lab 07 - 以Bootstrap重新排版</td>
+            <td>課表與Bootstrap的火花</td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_07.html">Lab_07.html</a></td>
+          </tr>
+          
 
         </tbody>
       </table>
