--- a/Lab/index.html
+++ b/Lab/index.html
@@ -41,7 +41,7 @@
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_04.html">Lab_04.html</a></td>
           </tr>
           <tr>
-            <td>Lab 05 - lab04改以css美化課表</td>
+            <td>Lab 05 - css美化課表</td>
             <td>利用所學進一步美化課表</td>
             <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Lab/Lab_05.html">Lab_05.html</a></td>
           </tr>
