--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -28,6 +28,14 @@
         .divider{
             background-color:rgb(233, 204, 141);
         }
+        table, th, td {
+            border:1px solid #283753;
+        }
+        /*折疊為單一編框 */
+        /*table{
+            border-collapse:collapse;
+        }
+        */
     </style>
 </head>
 <body>
