--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -41,7 +41,7 @@
 <body>
   <h1>課表</h1>
     <table>
-        <caption>產業新尖兵 mbnv</caption>
+        <caption>產業新尖兵 </caption>
         <thead>
           <tr>
             <th>  </th>
