--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -32,10 +32,10 @@
             border:1px solid #283753;
         }
         /*折疊為單一編框 */
-        /*table{
+        table{
             border-collapse:collapse;
         }
-        */
+        
     </style>
 </head>
 <body>
