--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -11,7 +11,8 @@
         }
 
         table{
-            width: 70vw;font-family:Arial, Helvetica, sans-serif" border=1
+            width: 70vw;font-family:Arial, Helvetica, sans-serif";
+            
         }
 
         tr{
@@ -34,6 +35,7 @@
         /*折疊為單一編框 */
         table{
             border-collapse:collapse;
+
         }
         
     </style>
