--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -12,7 +12,7 @@
 
         table{
             width: 70vw;font-family:Arial, Helvetica, sans-serif";
-            
+
         }
 
         tr{
@@ -33,9 +33,9 @@
             border:1px solid #283753;
         }
         /*折疊為單一編框 */
-        table{
+        table {
             border-collapse:collapse;
-
+            border-radius: 30px ;
         }
         
     </style>
