--- a/Lab/Lab_05.html
+++ b/Lab/Lab_05.html
@@ -30,7 +30,7 @@
             background-color:rgb(233, 204, 141);
         }
         table, th, td {
-            border:1px solid #283753;
+            border:1px solid #889ec7;
         }
         /*折疊為單一編框 */
         table {
