--- a/Exercise/Exercise_03/index.html
+++ b/Exercise/Exercise_03/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise_03</title>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;">
     <!--index代表首頁-->
@@ -23,17 +23,17 @@
           <tr>
             <td>Exercise 01 </td>
             <td>修改檔案內容--排版</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03/ex3-1.html" target="_blank">Exercise_01.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/ex3-1.html" target="_blank">Exercise_01.html</a></td>
           </tr>
           <tr>
             <td>Exercise 02 </td>
             <td>修改檔案內容，建立以新視窗開啟之超連結</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03/ex3-2.html" target="_blank">Exercise_02.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/ex3-2.html" target="_blank">Exercise_02.html</a></td>
           </tr>
           <tr>
             <td>Exercise 03 </td>
             <td>建立三個網頁以超連結互相連結</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/exercise/exercise_03/ex3-3.html" target="_blank">Exercise_03.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/ex3-3.html" target="_blank">Exercise_03.html</a></td>
         </tbody>
       </table>
       
