--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -24,19 +24,19 @@
           <tr>
             <td>Exercise_01 </td>
             <td>修改檔案內容--排版</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_01/exercise_01.html" target="_blank">Exercise_01.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_01/index.html" target="_blank">Exercise_01.html</a></td>
           </tr>
           <!--a href 後接blank要不要空格-->
           <tr>
             <td>Exercise_02 </td>
             <td>修改檔案內容，建立以新視窗開啟之超連結</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_02/exercise_02.html" target="_blank">Exercise_02.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_02/index.html" target="_blank">Exercise_02.html</a></td>
           </tr>
           <tr>
             <td>Exercise_03 </td>
             <td>建立三個網頁以超連結互相連結</td>
             <td>
-              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03" target="_blank">Exercise_03.html</a>
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/index.html" target="_blank">Exercise_03.html</a>
             </td>
           </tr>
 
