--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -42,9 +42,9 @@
 
           <tr>
             <td>Exercise_04 </td>
-            <td></td>
+            <td>包含清單概念的網頁</td>
             <td>
-              
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_04" target="_blank">Exercise_04.html</a>
             </td>
           </tr>
           <!--包含清單概念的web,1_pic+internal_link+external_link-->
