--- a/Exercise/Exercise_04/index.html
+++ b/Exercise/Exercise_04/index.html
@@ -13,8 +13,14 @@
 不能動沒關係，做個樣子就行
 例如：代辦清單、網誌（文章列表）等
 -->
+<!--放圖片-->
 <div>
-    <img src="./mountain.jpg">
+    <img src="./mountain.jpg"
+         width="500"
+         alt="round to moutain"
+         title="moutain"
+    >
+<!--不設定height，會依定比例增加-->
 
 </div>
 
