--- a/Exercise/Exercise_04/index.html
+++ b/Exercise/Exercise_04/index.html
@@ -13,18 +13,28 @@
 不能動沒關係，做個樣子就行
 例如：代辦清單、網誌（文章列表）等
 -->
+
 <!--放圖片-->
-<div>
+<!--不設定height，會依定比例增加-->
+<div >
     <img src="./mountain.jpg"
          width="500"
          alt="round to moutain"
          title="moutain"
     >
-<!--不設定height，會依定比例增加-->
+
 </div>
 
+<!--具有連結效果的html ul li清單-->
 <div>
-    
+    <ul>
+        <li><a href="https://www.taiwan.net.tw" target="_blank" title="Tourism Bureau">台灣觀光局</a></li>
+        <li><a href="https://www.taiwantourbus.com.tw/C/tw/home" target="_blank" title="taiwan tour bus">台灣觀光巴士路線</a></li>
+        <li><a href="https://www.thsrc.com.tw/ArticleContent/5b93cc99-3a1e-4000-a545-aa5dfe375708" target="_blank" title="Taiwan High Speed Rail">台灣高鐵</a></li>
+        <li><a herf="Exercise/Exercise_08" target="_blank" title="mascot" >可愛的苦力怕</a></li>
+    </ul>
+
+
 </div>
 
 
