--- a/Exercise/Exercise_04/index.html
+++ b/Exercise/Exercise_04/index.html
@@ -16,7 +16,9 @@
 
 <!--放圖片-->
 <!--不設定height，會依定比例增加-->
+
 <div >
+    <h1>我是假的旅遊網</h1>
     <img src="./mountain.jpg"
          width="500"
          alt="round to moutain"
@@ -27,6 +29,7 @@
 
 <!--具有連結效果的html ul li清單-->
 <div>
+    <h1>相關連結：</h1>
     <ul>
         <li><a href="https://www.taiwan.net.tw" target="_blank" title="Tourism Bureau">台灣觀光局</a></li>
         <li><a href="https://www.taiwantourbus.com.tw/C/tw/home" target="_blank" title="taiwan tour bus">台灣觀光巴士路線</a></li>
