--- a/Exercise/Exercise_04/index.html
+++ b/Exercise/Exercise_04/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise_04</title>
 </head>
-<body>
-    
+
 <!--嘗試撰寫一個包含清單概念的網頁
 至少須包含：一張圖、一個外部超連結、一個內部超連結
 不能動沒關係，做個樣子就行
 例如：代辦清單、網誌（文章列表）等
 -->
 
-<!--放圖片-->
+
+<body>   
+<!-- 1. 放圖片-->
 <!--不設定height，會依定比例增加-->
 
 <div >
@@ -22,12 +23,11 @@
     <img src="./mountain.jpg"
          width="500"
          alt="round to moutain"
-         title="moutain"
-    >
+         title="moutain">
 
 </div>
 
-<!--具有連結效果的html ul li清單-->
+<!-- 2. 具有連結效果的html ul li清單-->
 <div>
     <h4>        相關連結：</h4>
     <ul>
@@ -36,10 +36,7 @@
         <li><a href="https://www.thsrc.com.tw/ArticleContent/5b93cc99-3a1e-4000-a545-aa5dfe375708" target="_blank" title="Taiwan High Speed Rail">台灣高鐵</a></li>
         <li><a herf="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_08" target="_blank" title="mascot" >可愛的苦力怕</a></li>
     </ul>
-
-
 </div>
-
 
 
 </body>
