--- a/Exercise/Exercise_04/index.html
+++ b/Exercise/Exercise_04/index.html
@@ -29,7 +29,7 @@
 
 <!-- 2. 具有連結效果的html ul li清單-->
 <div>
-    <h4>        相關連結：</h4>
+    <h4>相關連結：</h4>
     <ul>
         <li><a href="https://www.taiwan.net.tw" target="_blank" title="Tourism Bureau">台灣觀光局</a></li>
         <li><a href="https://www.taiwantourbus.com.tw/C/tw/home" target="_blank" title="taiwan tour bus">台灣觀光巴士路線</a></li>
@@ -38,6 +38,9 @@
     </ul>
 </div>
 
+<!--Question:-->
+<!--相關連結前面空格不能顯示在web上-->
+<!--苦力怕沒有超連結-->
 
 </body>
 </html>
