--- a/Exercise/Exercise_05/index.html
+++ b/Exercise/Exercise_05/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise_05</title>
+
+
+
 </head>
+
+<!--嘗試撰寫網誌的頁面
+包含文章列表頁面與至少一個檢視單一文章頁面
+不能動沒關係，做個樣子就行，但該有的超連結還是要放
+須使用「語意化標籤」
+使用 style 屬性美化頁面
+ -->
+
+
 <body>
     
 </body>
