--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -24,19 +24,19 @@
           <tr>
             <td>Exercise_01 </td>
             <td>修改檔案內容--排版</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_01/index.html" target="_blank">Exercise_01.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_01/index.html" target="_blank">Exercise_01</a></td>
           </tr>
           <!--a href 後接blank要不要空格-->
           <tr>
             <td>Exercise_02 </td>
             <td>修改檔案內容，建立以新視窗開啟之超連結</td>
-            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_02/index.html" target="_blank">Exercise_02.html</a></td>
+            <td><a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_02/index.html" target="_blank">Exercise_02</a></td>
           </tr>
           <tr>
             <td>Exercise_03 </td>
             <td>建立三個網頁以超連結互相連結</td>
             <td>
-              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/index.html" target="_blank">Exercise_03.html</a>
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_03/index.html" target="_blank">Exercise_03</a>
             </td>
           </tr>
 
@@ -44,7 +44,7 @@
             <td>Exercise_04 </td>
             <td>包含清單概念的網頁</td>
             <td>
-              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_04" target="_blank">Exercise_04.html</a>
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_04" target="_blank">Exercise_04</a>
             </td>
           </tr>
           <!--包含清單概念的web,1_pic+internal_link+external_link-->
@@ -53,7 +53,7 @@
             <td>Exercise_05 </td>
             <td>嘗試撰寫網誌頁面</td>
             <td>
-              
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_05" target="_blank">Exercise_05</a>
             </td>
           </tr>
 
@@ -61,7 +61,7 @@
             <td>Exercise_06 </td>
             <td>個人簡歷網頁</td>
             <td>
-              
+              <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_06" target="_blank">Exercise_06</a>
             </td>
           </tr>
 
