--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -77,7 +77,7 @@
 
           <tr>
             <td>Exercise_07 </td>
-            <td>善用工具除錯 Html</td>
+            <td>善用工具來替 Html 除錯</td>
             <td>
               <a href="https://kikmiao1995.github.io/kiki-web--demo/Exercise/Exercise_07" target="_blank">Exercise_07</a>
             </td>
