--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -66,7 +66,7 @@
           </tr>
 
           <tr>
-            <td>Exercise_？？ </td>
+            <td>Exercise_?? </td>
             <td>隱藏版--完成w3schools的HTML練習</td>
             <td>
               <a href="https://www.w3schools.com/html/exercise.asp" title="好喔" target="_blank">
