--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -19,9 +19,13 @@
     <table>
         <thead>
             <tr>
-                <!--可以省略tr直接寫th嗎？-->
-                <th colspan="3">資產</th>
-                <th colspan="3">負債及股東權益</th>
+                <th colspan="6">資產負載表</td>
+            </tr>
+         <!--可以省略tr直接寫th嗎？-->
+         <!--可以省略th直接寫td嗎？-->
+            <tr>
+                <td colspan="3">資產</th>
+                <td colspan="3">負債及股東權益</th>
             </tr>
             <tr>
                 <td rowspan="4">流動資產</td>
@@ -32,9 +36,57 @@
                 <td>1,634,870</td>
             </tr>
             <tr>
-                
+                <td>存貨</td>
+                <td>819,954</td>
+                <td></td>
+                <td>1,912,740</td>
             </tr>
-
+            <tr>
+                <td>應收帳款</td>
+                <td>945,494</td>
+                <td>應付帳款</td>
+                <td>277,870</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>2,164,974</td>
+                <td>非流動負債</td>
+                <td>長期借款</td>
+                <td>69,600</td>
+            </tr>
+            <tr>
+                <td rowspan="4">非流動資產</td>
+                <td rowspan="4">固定資產</td>
+                <td></td>
+                <td>負債合計</td>
+                <td></td>
+                <td>1,982,340</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td rowspan="2">股東權益</td>
+                <td>股本</td>
+                <td>1,102,186</td>
+            </tr>
+            <tr>
+                <td>1,361,096</td>
+                <td>保留盈餘</td>
+                <td>441,544</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>股東權益合計</td>
+                <td></td>
+                <td>1,543,730</td>
+            </tr>
+            <tr>
+                <td>資產合計</td>
+                <td></td>
+                <td>3,526,070</td>
+                <td>負債及股東權益</td>
+                <td></td>
+                <td>3,526,070</td>
+            </tr>
         </thead>
     </table>
 
