--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <table>
-       
+       <thead>
             <tr>
                 <th colspan="6">資產負載表</td>
             </tr>
@@ -27,6 +27,7 @@
                 <td colspan="3">資產</th>
                 <td colspan="3">負債及股東權益</th>
             </tr>
+        </thead>
             <tr>
                 <td rowspan="4">流動資產</td>
                 <td>現金</td>
