--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -24,8 +24,8 @@
          <!--可以省略tr直接寫th嗎？-->
          <!--可以省略th直接寫td嗎？-->
             <tr>
-                <td colspan="3">資產</th>
-                <td colspan="3">負債及股東權益</th>
+                <th colspan="3">資產</th>
+                <th colspan="3">負債及股東權益</th>
             </tr>
         </thead>
             <tr>
