--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -17,12 +17,11 @@
 </head>
 <body>
     <table>
-       <thead>
+        <!--thead中的標籤要是th才會有套用到，用td不會套用-->
+        <thead>
             <tr>
                 <th colspan="6">資產負載表</td>
             </tr>
-         <!--可以省略tr直接寫th嗎？-->
-         <!--可以省略th直接寫td嗎？-->
             <tr>
                 <th colspan="3">資產</th>
                 <th colspan="3">負債及股東權益</th>
