--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -14,17 +14,23 @@
         }
 
         /*先塗背景*/
-        
+        .blue {
+            background-color:rgb(152, 216, 231);
+        }
+        .yellow {
+            background-color: rgb(243, 243, 139);
+        }
+
     </style>
 </head>
 <body>
     <table>
         <!--thead中的標籤要是th才會有套用到，用td不會套用-->
         <thead>
-            <tr>
-                <th colspan="6">資產負載表</td>
+            <tr class="blue">
+                <th colspan="6">資產負債表</td>
             </tr>
-            <tr>
+            <tr class="yellow">
                 <th colspan="3">資產</th>
                 <th colspan="3">負債及股東權益</th>
             </tr>
@@ -81,7 +87,7 @@
                 <td></td>
                 <td>1,543,730</td>
             </tr>
-            <tr>
+            <tr class="yellow">
                 <td>資產合計</td>
                 <td></td>
                 <td>3,526,070</td>
