--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -20,6 +20,10 @@
         .yellow {
             background-color: rgb(255, 255, 92);
         }
+        .apple_green {
+            background-color: rgb(158, 189, 95);
+        }
+        
 
     </style>
 </head>
@@ -36,7 +40,7 @@
             </tr>
         </thead>
             <tr>
-                <td rowspan="4">流動資產</td>
+                <td class="apple_green" rowspan="4">流動資產</td>
                 <td>現金</td>
                 <td>399,526</td>
                 <td rowspan="3">流動負債</td>
