--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -23,7 +23,13 @@
         .apple_green {
             background-color: rgb(158, 189, 95);
         }
-        
+        .green {
+            background-color: green;
+        }
+        .light {
+            background-color:#32e72c;
+        }
+
 
     </style>
 </head>
@@ -67,7 +73,7 @@
                 <td>69,600</td>
             </tr>
             <tr>
-                <td rowspan="4">非流動資產</td>
+                <td class="green" rowspan="4">非流動資產</td>
                 <td rowspan="4">固定資產</td>
                 <td></td>
                 <td>負債合計</td>
@@ -76,7 +82,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td rowspan="2">股東權益</td>
+                <td class="light_green" rowspan="2">股東權益</td>
                 <td>股本</td>
                 <td>1,102,186</td>
             </tr>
@@ -87,7 +93,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td>股東權益合計</td>
+                <td class="light_green">股東權益合計</td>
                 <td></td>
                 <td>1,543,730</td>
             </tr>
