--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -29,6 +29,12 @@
         .light {
             background-color:#32e72c;
         }
+        .rose_red {
+            background-color: rgb(192, 54, 123);
+        }
+        .pink {
+            background-color: pink;
+        }
 
 
     </style>
@@ -49,7 +55,7 @@
                 <td class="apple_green" rowspan="4">流動資產</td>
                 <td>現金</td>
                 <td>399,526</td>
-                <td rowspan="3">流動負債</td>
+                <td class="pink" rowspan="3">流動負債</td>
                 <td>短期借款</td>
                 <td>1,634,870</td>
             </tr>
@@ -68,7 +74,7 @@
             <tr>
                 <td></td>
                 <td>2,164,974</td>
-                <td>非流動負債</td>
+                <td class="rose_red">非流動負債</td>
                 <td>長期借款</td>
                 <td>69,600</td>
             </tr>
@@ -76,7 +82,7 @@
                 <td class="green" rowspan="4">非流動資產</td>
                 <td rowspan="4">固定資產</td>
                 <td></td>
-                <td>負債合計</td>
+                <td class="pink">負債合計</td>
                 <td></td>
                 <td>1,982,340</td>
             </tr>
