--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -30,11 +30,15 @@
             background-color:#32e72c;
         }
         .rose_red {
-            background-color: rgb(192, 54, 123);
+            background-color: rgb(252, 71, 161);
         }
         .pink {
             background-color: pink;
         }
+
+        /*調整邊框與內容的距離，文字置中*/
+        
+
 
 
     </style>
