--- a/Exercise/Exercise_09/index.html
+++ b/Exercise/Exercise_09/index.html
@@ -11,8 +11,8 @@
             border: 2px solid black;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 16px;
+            border-collapse: collapse;
         }
-
         /*先塗背景*/
         .blue {
             background-color:rgb(152, 216, 231);
@@ -37,9 +37,7 @@
         }
 
         /*調整邊框與內容的距離，文字置中*/
-       th, td{
-           
-       }
+       
 
 
     </style>
